--- a/index.html
+++ b/index.html
@@ -1,19 +1,47 @@
 <!doctype html>
 
 <head>
+	<style>
+		input {
+			margin: 1em;
+			padding: 6px;
+		}
+
+		.searchBox {
+			border-style:groove;
+			border-radius: 8px;
+		}
+
+		.submitBtn {
+			border-radius: 25%;
+		}
+
+		.submitBtn:hover {
+			background-color: rgb(0, 255, 234)
+		}
+	</style>
 	<meta charset="utf-8">
 	<script>
-		// TODO: create a handler
+	function setSearchEngine() {
+		console.log("Setting Search Engine")
+	}
     window.addEventListener("load", function(){
-        // TODO: register the handler
+		const form = document.getElementById("searchForm")
+		form.addEventListener("submit", setSearchEngine());
     });
+
 	</script>
 </head>
 
 <body>
 
 	<form id="searchForm">
-    <!-- TODO: add form elements -->
+    <input class= "searchBox" type="text" name="q">
+	<label>Google<input type="radio" name="engine"></label>
+	<label>DuckDuckGo<input type="radio" name="engine"></lable>
+	<label>Bing<input type="radio" name="engine"></label>
+	<label>Ask<input type="radio" name="engine"></label>
+	<input class="submitBtn" type="submit" value="Go!">
 	</form>
 
 </body>
